# zdatasets

./: .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/workflows/: test.yml
binder/: Dockerfile  DockerfileOLD  environment.yml  environment.yml.old  postBuild  postBuild.old  tutorials.jupyterlab-workspace  workshop.jupyterlab-workspace
datasets/: __init__.py  _typing.py  config.py  context.py  data_container_type.py  dataset.py  dataset_plugin.py  datasets_decorator.py  metaflow.py  mode.py  program_executor.py  utils.py
datasets/plugins/: __init__.py  register_plugins.py
datasets/plugins/batch/: batch_base_plugin.py  batch_dataset.py  batch_dataset_plugin.py  batch_flow_dataset_plugin.py  config.py  flow_dataset.py  hive_dataset.py  zillow_batch_path.py  zillow_dataset_path.py
datasets/plugins/executors/: metaflow_executor.py
datasets/plugins/metaflow_executor/: metaflow_executor.py
datasets/plugins/offline/: offline_dataset.py  offline_flow_dataset.py  zillow_dataset_path.py
datasets/plugins/zillow/: zillow_dataset_path.py
datasets/tests/: conftest.py  test_batch_dataset.py  test_batch_flow_plugin.py  test_dataset.py  test_dataset_plugin.py  test_datasets_decorator.py  test_flow_dataset.py  test_hive_dataset.py  test_metaflow.py  test_offline_dataset.py  test_tutorials.py  test_txf.py  test_utils.py
datasets/tests/resources/: txf_test_flow.py
datasets/tests/utils/: test_case_utils.py  test_partitions.py  test_secret.py  test_secret_fetcher.py
datasets/tutorials/: 0_hello_dataset_flow.py  1_input_output_flow.py  2_spark_dask_flow.py  3_foreach_dataset_flow.py  4_hello_plugin_flow.py  5_consistent_flow.py  6_hive_dataset_flow.py  README.ipynb  online_plugin.py
datasets/tutorials/data/my_dataset_foreach/region=A/: part.0.parquet
datasets/tutorials/data/my_dataset_foreach/region=B/: part.0.parquet
datasets/txf_integration/: txf_utils.py
datasets/utils/: __init__.py  aws.py  case_utils.py  partitions.py  secret.py  secret_fetcher.py
docs/: conf.py  index.rst
zdatasets/: __init__.py  context.py  dataset_plugin.py  datasets_decorator.py  metaflow.py  mode.py  program_executor.py
zdatasets/plugins/: __init__.py  register_plugins.py
zdatasets/plugins/batch/: batch_base_plugin.py  batch_dataset.py  flow_dataset.py  hive_dataset.py
zdatasets/plugins/executors/: metaflow_executor.py
zdatasets/tests/: conftest.py  test_batch_dataset.py  test_dataset_plugin.py  test_datasets_decorator.py  test_flow_dataset.py  test_hive_dataset.py  test_metaflow.py  test_tutorials.py
zdatasets/tests/data/train/date=2020-07-23/region=king/: data.parquet
zdatasets/tests/utils/: test_case_utils.py  test_partitions.py  test_secret_fetcher.py
zdatasets/tutorials/: 0_hello_dataset_flow.py  1_input_output_flow.py  2_spark_dask_flow.py  3_foreach_dataset_flow.py  4_hello_plugin_flow.py  5_consistent_flow.py  6_hive_dataset_flow.py  README.ipynb  online_plugin.py
zdatasets/utils/: aws.py  case_utils.py  partitions.py  secret_fetcher.py
