[tool.poetry]
name = "datasets"
version = "0.0.1"
description = "Dataset SDK for consistent read/write [offline, online, streaming] data for ML Programs."
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.7"
]
authors = ["Zillow AI Platform"]
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.7,<4"
pandas = "^1.1.0"
pyarrow = "^5.0.0"
dask = "^2021.9.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.7b0"
flake8 = "^3.9.2"
isort = "^5.9.3"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
seed-isort-config = "^2.2"
pre-commit = "^2.15"
pytest-depends = "^1.0.1"
pyspark = "^3.1.2"

[tool.poetry.extras]
doc = ["sphinx", "sphinx_rtd_theme"]
metaflow = ["metaflow"]

[tool.isort]
known_first_party = 'datasets'
known_third_party = ["datasets", "numpy", "orbital_core", "pandas"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.black]
line-length = 110
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
