[tool.poetry]
name = "zdatasets"
version = "1.3.0"
description = "Dataset SDK for consistent read/write [batch, online, streaming] data."
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
]
authors = ["Taleb Zeghmi"]
readme = "README.md"

[[tool.poetry.packages]]
include = "zdatasets"

# https://packaging.python.org/guides/creating-and-discovering-plugins/
[tool.poetry.plugins]
[tool.poetry.plugins."zdatasets.plugins"]
batch_dataset = "zdatasets.plugins:BatchDataset"
flow_dataset = "zdatasets.plugins:FlowDataset"
hive_dataset = "zdatasets.plugins:HiveDataset"

[tool.poetry.plugins."zdatasets.executors"]
metaflow_executor = "zdatasets.plugins:MetaflowExecutor"

[tool.poetry.dependencies]
python = ">=3.10.0,<4"
numpy = "^1.26.0"
pandas = ">=2.3.1"
pyarrow = ">=21.0.0"
dask = { version = ">=2025.1.0", optional = true }
pyspark = { version = "^3.2.0", optional = true }
importlib-metadata = ">=4.6.1"
click = "^8"
s3fs = ">=2025.7.0"
tenacity = ">=8.1.0"
kubernetes = { version = ">=32.0.0", optional = true }
setuptools = { version = ">=65.0.0,<80", optional = true }

[tool.poetry.group.dev.dependencies]
mypy = "^0.982"
black = "^23.1.0"
flake8 = ">=3.9.2"
isort = ">=5.9.3"
pytest = ">=6.2.4"
pytest-cov = ">=2.12.1"
seed-isort-config = ">=2.2"
pre-commit = ">=2.15"
pytest-depends = ">=1.0.1"
moto = {extras = ["s3", "secretsmanager"], version = ">=5.0.0"}

[tool.poetry.extras]
doc = ["sphinx", "sphinx_rtd_theme"]
metaflow = ["zillow-metaflow", "setuptools"]
dask = ["dask"]
spark = ["pyspark"]
kubernetes = ["kubernetes"]

[tool.isort]
known_first_party = 'zdatasets'
known_third_party = ["zdatasets", "numpy", "orbital_core", "pandas"]
multi_line_output = 3
lines_after_imports = 2
force_grid_wrap = 0
combine_as_imports = true
include_trailing_comma = true

[tool.black]
line-length = 110
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry>=1.1.10"]
build-backend = "poetry.masonry.api"
